use grid-list instead of list, bug fix: timeline z-index

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -55,6 +55,10 @@ md-toolbar h1 {
 	position:absolute;
 }
 
+.md-48 {
+	font-size: 48px;
+}
+
 md-content[ui-view='content'], md-content[ui-view='module'] {
 	min-height: 100%;
 	height: 100%;
@@ -65,4 +69,8 @@ md-content[ui-view='content'], md-content[ui-view='module'] {
 md-content[ui-view='content'] {
 	padding: 20px;
 	overflow: auto;
+}
+
+.timeline-badge {
+	z-index: 1 !important;
 }
